preparing for vue components

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
             </div>
             <input v-model="schiffsnotiz" id="tablenote" class="name-note" :disabled="disabled">
           </div>
-          <div class="grid-main-content">
+          <div class="grid-main-content" ref="maincontent">
             <div class="grid-main-content-title title">
               Containerliste
             </div>
@@ -62,66 +62,67 @@
                   </div>
                 </div>
               </div>
-
-              <div class="table-content" v-for="eintrag in tabellenEintrag">
-                <div class="tableid cell">{{ eintrag.ID }}</div>
-                <div class="cell">
-                  <input v-model="eintrag.SdgNr" class="tableinput tablesdgnr">
+              <div class="test">
+                <div class="table-content" v-for="eintrag in tabellenEintrag">
+                  <div class="tableid cell">{{ eintrag.ID }}</div>
+                  <div class="cell">
+                    <input v-model="eintrag.SdgNr" class="tableinput tablesdgnr">
+                    <div class="cell">
+                  </div>
+                    <input v-model="eintrag.ContainerNr" class="tableinput tablecontainernr">
+                  </div>
+                  <div class="cell">
+                    <input v-model="eintrag.Loeschdatum" class="tableinput tableloeschdatum">
+                  </div>
+                  <div class="cell">
+                    <input v-model="eintrag.Uhrzeit" class="tableinput tableuhrzeit">
+                  </div>
+                  <div>
+                    <select v-model="eintrag.Status" class="tableselect">
+                      <option>n.g.</option>
+                      <option>i.V.</option>
+                      <option>✅</option>
+                      <option>leer</option>
+                    </select>
+                  </div>
+                  <div class="cell">
+                    <input v-model="eintrag.Abgabedatum" class="tableinput tableabgabdedatum">
+                  </div>
+                  <div class="cell">
+                    <input v-model="eintrag.Notiz" class="tableinput tablenotiz">
+                  </div>
+                  <button v-on:click="deleteRow(eintrag)" class="tablebtn cell"></button>
                 </div>
-                <div class="cell">
-                  <input v-model="eintrag.ContainerNr" class="tableinput tablecontainernr">
+                <div class="table-add">
+                  <div class="addrowlength">{{ rowLength }}</div>
+                  <div class="addsdgnr">
+                    <input v-model="init.sdgnr" :disabled="disabled">
+                  </div>
+                  <div class="addcontainernr">
+                    <input v-model="init.containernr" :disabled="disabled">
+                  </div>
+                  <div class="addloeschdatum">
+                    <input v-model="init.loeschdatum" :disabled="disabled">
+                  </div>
+                  <div class="adduhrzeit">
+                    <input v-model="init.uhrzeit" :disabled="disabled">
+                  </div>
+                  <div>
+                    <select v-model="init.status" class="addtableselect" :disabled="disabled">
+                      <option>n.g.</option>
+                      <option>i.V.</option>
+                      <option>✅</option>
+                      <option>leer</option>
+                    </select>
+                  </div>
+                  <div class="addabgabedatum">
+                    <input v-model="init.abgabedatum" :disabled="disabled">
+                  </div>
+                  <div class="addnotiz">
+                    <input v-model="init.notiz" :disabled="disabled">
+                  </div>
+                  <button v-on:click="addRow" class="btn tableaddbtn cell" :disabled="disabled">+</button>
                 </div>
-                <div class="cell">
-                  <input v-model="eintrag.Loeschdatum" class="tableinput tableloeschdatum">
-                </div>
-                <div class="cell">
-                  <input v-model="eintrag.Uhrzeit" class="tableinput tableuhrzeit">
-                </div>
-                <div>
-                  <select v-model="eintrag.Status" class="tableselect">
-                    <option>n.g.</option>
-                    <option>i.V.</option>
-                    <option>✅</option>
-                    <option>leer</option>
-                  </select>
-                </div>
-                <div class="cell">
-                  <input v-model="eintrag.Abgabedatum" class="tableinput tableabgabdedatum">
-                </div>
-                <div class="cell">
-                  <input v-model="eintrag.Notiz" class="tableinput tablenotiz">
-                </div>
-                <button v-on:click="deleteRow(eintrag)" class="tablebtn cell"></button>
-              </div>
-              <div class="table-add">
-                <div class="addrowlength">{{ rowLength }}</div>
-                <div class="addsdgnr">
-                  <input v-model="init.sdgnr" :disabled="disabled">
-                </div>
-                <div class="addcontainernr">
-                  <input v-model="init.containernr" :disabled="disabled">
-                </div>
-                <div class="addloeschdatum">
-                  <input v-model="init.loeschdatum" :disabled="disabled">
-                </div>
-                <div class="adduhrzeit">
-                  <input v-model="init.uhrzeit" :disabled="disabled">
-                </div>
-                <div>
-                  <select v-model="init.status" class="addtableselect" :disabled="disabled">
-                    <option>n.g.</option>
-                    <option>i.V.</option>
-                    <option>✅</option>
-                    <option>leer</option>
-                  </select>
-                </div>
-                <div class="addabgabedatum">
-                  <input v-model="init.abgabedatum" :disabled="disabled">
-                </div>
-                <div class="addnotiz">
-                  <input v-model="init.notiz" :disabled="disabled">
-                </div>
-                <button v-on:click="addRow" class="btn tableaddbtn cell" :disabled="disabled">+</button>
               </div>
             </div>
           </div>
@@ -134,7 +135,7 @@
           </form>
         </div>
         <div class="grid-exportall">
-          <button class="btn funcbtn">Alle Exportieren</button>
+          <button v-on:click="loadFiles"class="btn funcbtn">Alle Exportieren</button>
         </div>
         <div class="grid-exportlist">
           <button v-on:click="exportList" class="btn funcbtn">Liste Exportieren</button>
