new look, export / import still missing

--- a/app/modal.html
+++ b/app/modal.html
@@ -16,7 +16,7 @@
                 <button v-on:click="addTable" class="btn modalbtn addnewbtn">Neue Tabelle</button>
             </div>
             <div class="modal-loadnew">
-                <button v-on:click="addExisting" class="btn modalbtn loadnewbtn">Bestehende Tabelle laden</button>
+                <button v-on:click="addExisting" class="btn modalbtn loadnewbtn">Tabelle(n) laden</button>
             </div>
             <div class="modal-cancel">
                 <button v-on:click="cancel" class="btn modalbtn cancelbtn">Abbrechen</button>
