--- a/app/index.html
+++ b/app/index.html
@@ -133,7 +133,7 @@
           </form>
         </div>
         <div class="grid-exportall">
-          <button v-on:click="loadFiles" class="btn funcbtn">Alle Exportieren</button>
+          <button v-on:click="exportAll" class="btn funcbtn">Alle Exportieren</button>
         </div>
         <div class="grid-exportlist">
           <button v-on:click="exportList(currentList)" class="btn funcbtn">Liste Exportieren</button>
