--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body onresize="setHeight()">
-  <div id="app">
+  <div id="app" v-cloak>
     <div class="grid-container">
       <div class="logo">
       </div>
